servicos crud finished

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -75,7 +75,7 @@
             <a (click)="mostrarRec()" class="link">Esqueceu sua senha?</a>
           </div>
           <div class="ui-g-6">
-            <a href="/cadastro">Cadastrar-se</a>
+            <a href="#/home/user/cadastro">Cadastrar-se</a>
           </div>
         </div>
 
