--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -2,19 +2,10 @@
 
 <div class="servico">
   <p-tabView>
-    <p-tabPanel header="Adicionar categoria">
+    <p-tabPanel header="Categorias e Serviços" selected="true">
 
-
-
-    </p-tabPanel>
-    <p-tabPanel header="Adicionar servico">
-
-
-    </p-tabPanel>
-    <p-tabPanel header="Listar" selected="true">
-        
       <app-crud></app-crud>
-        
+
     </p-tabPanel>
     <p-tabPanel header="Aprovar">
 
