implementing busca start

--- a/src/app/cadastro/pfisica/pfisica.component.html
+++ b/src/app/cadastro/pfisica/pfisica.component.html
@@ -424,7 +424,7 @@
   </p-fieldset>
 
   <div class="ui-g">
-    <div class="ui-g-12 buttonForm">
+    <div class="ui-g-12">
       <p-growl [value]="msgs"></p-growl>
       <p-confirmDialog acceptLabel="Sim" rejectLabel="Não"></p-confirmDialog>
 
