--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -8,7 +8,8 @@
 
     </p-tabPanel>
     <p-tabPanel header="Aprovar">
-
+      
+      <app-aprovar></app-aprovar>
 
     </p-tabPanel>
     <p-tabPanel header="Relatório de busca">
@@ -16,8 +17,9 @@
 
     </p-tabPanel>
 
-    <p-tabPanel header="Adicionar Plano">
+    <p-tabPanel header="Planos">
 
+      <app-planos></app-planos>
 
     </p-tabPanel>
   </p-tabView>
