--- a/src/app/nav-bar/administrador/administrador-nav.component.html
+++ b/src/app/nav-bar/administrador/administrador-nav.component.html
@@ -1,24 +1,39 @@
 <nav class="navbar navbar-default navbar-static-top">
+  <form [formGroup]="formulario" (ngSubmit)="buscar()">
     <div class="container-fluid ui-g ui-fluid">
       <div class="navbar-header ui-g-2">
         <a class="navbar-brand" routerLink="/home/admin">Sobral Serviços</a>
       </div>
-  
       <div class="ui-g-6">
         <div class="ui-g-9">
-          <input type="text" pInputText placeholder="Procure um serviço...">
+          <input type="text" formControlName="campoBusca" pInputText placeholder="Procure um serviço...">
         </div>
-        <div class="ui-g-3">
-          <app-busca></app-busca>
+        <div class="ui-g-3" *ngIf="!formulario.controls['campoBusca'].value">
+          <app-busca-dialog></app-busca-dialog>
+        </div>
+        <div class="ui-g-3" *ngIf="formulario.controls['campoBusca'].value">
+          <button pButton type="submit" label="Buscar" routerLink="/home/admin/busca" (click)="buscar()" icon="fa-search">
+          </button>
         </div>
       </div>
       <div class="ui-g-4">
         <ul class="nav navbar-nav navbar-right">
-          <li><a routerLink="/home/admin/servicos">Serviços</a></li>
-          <li><a routerLink="/home/admin/cadastro">Finanças</a></li>
-          <li><a routerLink="/home/admin/cadastro">Cadastrar</a></li>
-          <li><a routerLink="/home/admin/login">Login</a></li>
+          <li>
+            <a routerLink="/home/admin/servicos">Serviços</a>
+          </li>
+          <li>
+            <a routerLink="/home/admin/login">Finanças</a>
+          </li>
+          <li>
+            <a routerLink="/home/admin/cadastro">Cadastrar</a>
+          </li>
+          <li>
+            <a routerLink="/home/admin/login">Login</a>
+          </li>
         </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </form>
+</nav>
