--- a/src/app/nav-bar/usuario/usuario-nav.component.html
+++ b/src/app/nav-bar/usuario/usuario-nav.component.html
@@ -1,22 +1,35 @@
 <nav class="navbar navbar-default navbar-static-top">
-  <div class="container-fluid ui-g ui-fluid">
-    <div class="navbar-header ui-g-2">
-      <a class="navbar-brand" routerLink="/home/user">Sobral Serviços</a>
-    </div>
-
-    <div class="ui-g-8">
-      <div class="ui-g-10">
-        <input type="text" pInputText placeholder="Procure um serviço...">
+  <form [formGroup]="formulario" (ngSubmit)="buscar()">
+    <div class="container-fluid ui-g ui-fluid">
+      <div class="navbar-header ui-g-2">
+        <a class="navbar-brand" routerLink="/home/user">Sobral Serviços</a>
+      </div>
+      <div class="ui-g-8">
+        <div class="ui-g-10">
+          <input type="text" formControlName="campoBusca" pInputText placeholder="Procure um serviço...">
+        </div>
+        <div class="ui-g-2" *ngIf="!formulario.controls['campoBusca'].value">
+          <app-busca-dialog></app-busca-dialog>
+        </div>
+        <div class="ui-g-2" *ngIf="formulario.controls['campoBusca'].value">
+          <button pButton type="submit" label="Buscar" routerLink="/home/user/busca" (click)="buscar()" icon="fa-search">
+          </button>
+        </div>
       </div>
       <div class="ui-g-2">
-        <app-busca></app-busca>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a routerLink="/home/user/cadastro">Cadastrar</a>
+          </li>
+          <li>
+            <a routerLink="/home/user/login">Login</a>
+          </li>
+        </ul>
       </div>
+      <!-- /.navbar-collapse -->
     </div>
-    <div class="ui-g-2">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/home/user/cadastro">Cadastrar</a></li>
-        <li><a routerLink="/home/user/login">Login</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    <!-- /.container-fluid -->
+  </form>
 </nav>
+
+<router-outlet></router-outlet>
