end of discipline

--- a/src/app/busca-dialog/busca-dialog.component.html
+++ b/src/app/busca-dialog/busca-dialog.component.html
@@ -29,7 +29,7 @@
 
         <div class="ui-g-2"></div>
         <div class="ui-g-4">
-          <button pButton type="submit" (click)="buscarF()" label="Buscar"></button>
+          <button pButton type="submit" label="Buscar"></button>
         </div>
         <div class="ui-g-4">
           <button pButton type="button" (click)="voltar()" label="Voltar"></button>
