--- a/src/app/servicos/servicos.component.html
+++ b/src/app/servicos/servicos.component.html
@@ -2,26 +2,24 @@
 
 <div class="servico">
   <p-tabView>
-    <p-tabPanel header="Categorias e Serviços">
+    <p-tabPanel header="Categorias e Serviços" selected="true">
 
       <app-crud></app-crud>
 
     </p-tabPanel>
-    <p-tabPanel header="Aprovar">
-      
-      <app-aprovar></app-aprovar>
+    <!-- <p-tabPanel header="Aprovar profissionais">
+
 
     </p-tabPanel>
-    <p-tabPanel header="Relatório de busca" selected="true">
+    <p-tabPanel header="Relatório de busca">
 
-      <app-relatorio-busca></app-relatorio-busca>
 
     </p-tabPanel>
 
     <p-tabPanel header="Planos">
 
-      <app-planos></app-planos>
+      
 
-    </p-tabPanel>
+    </p-tabPanel> -->
   </p-tabView>
 </div>
