--- a/src/app/busca-texto/busca-texto.component.html
+++ b/src/app/busca-texto/busca-texto.component.html
@@ -1,3 +1,5 @@
+<p-growl [(value)]="msgs"></p-growl>
+
 <div class="card" *ngFor="let prestador of prestadores">
   <div class="card-block">
     <h5 class="card-title">{{ prestador.name }}</h5>
@@ -14,6 +16,7 @@
     </div>
   </div>
 </div>
+
 
 <!-- <fieldset class="ui-g-12 card">
     <div class="ui-g-12">
