--- a/src/app/nav-bar/administrador/administrador-nav.component.html
+++ b/src/app/nav-bar/administrador/administrador-nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded ui-g ui-fluid">
   <div class="ui-g-2">
-    <a class="navbar-brand" routerLink="/home/admin">Sobral Serviços</a>
+    <a class="navbar-brand" (click)="home()" routerLink="/home/admin">Sobral Serviços</a>
   </div>
 
   <div class="ui-g-7">
@@ -9,7 +9,7 @@
         <input type="text" formControlName="campoBusca" pInputText placeholder="Procure um serviço...">
       </div>
       <div class="ui-g-2" *ngIf="formulario.controls['campoBusca'].value">
-        <button pButton type="submit" label="Buscar" (click)="buscar()" icon="fa-search">
+        <button pButton type="submit" label="Buscar" icon="fa-search">
         </button>
       </div>
     </form>
@@ -24,13 +24,13 @@
         <a class="nav-link" routerLink="/home/admin/servicos">Serviços</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/home/admin/cadastro">Finanças</a>
+        <a class="nav-link clickable">Finanças</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/home/admin/cadastro">Cadastrar</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/home/admin/login">Login</a>
+        <a class="nav-link clickable" (click)="sair()">Sair</a>
       </li>
     </ul>
   </div>
