--- a/src/app/nav-bar/prestador/prestador-nav.component.html
+++ b/src/app/nav-bar/prestador/prestador-nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded ui-g ui-fluid">
   <div class="ui-g-2">
-    <a class="navbar-brand" routerLink="/home/prestador">Sobral Serviços</a>
+    <a class="navbar-brand" (click)="home()" routerLink="/home/prestador">Sobral Serviços</a>
   </div>
 
   <div class="ui-g-5">
@@ -9,7 +9,7 @@
         <input type="text" formControlName="campoBusca" pInputText placeholder="Procure um serviço...">
       </div>
       <div class="ui-g-3" *ngIf="formulario.controls['campoBusca'].value">
-        <button pButton type="submit" label="Buscar" (click)="buscar()" icon="fa-search">
+        <button pButton type="submit" label="Buscar" icon="fa-search">
         </button>
       </div>
     </form>
@@ -21,16 +21,19 @@
   <div class="ui-g-5">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/home/prestador/login">Serviços prestados</a>
+        <a class="nav-link clickable">Serviços prestados</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/home/prestador/cadastro">Solicitações de serviço</a>
+        <a class="nav-link clickable">Solicitações de serviço</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/home/prestador/cadastro">Cadastrar</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/home/prestador/perfil">Perfil</a>
+        <a class="nav-link clickable" (click)="abrirPerfil()">Perfil</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link clickable" (click)="sair()">Sair</a>
       </li>
     </ul>
   </div>
